Fixes for findbugs errors (See #2596).
git-svn-id: file:///home/svn/omero/trunk@7686 05709c45-44f0-0310-885b-81a1db45b4a6